[gd_scene load_steps=16 format=2]

[ext_resource path="res://pursuit scene/carro png.png" type="Texture" id=1]
[ext_resource path="res://scripts/PlayerCar.gd" type="Script" id=2]
[ext_resource path="res://audio/Chase2 advanced.wav" type="AudioStream" id=3]
[ext_resource path="res://testcasc.tscn" type="PackedScene" id=4]
[ext_resource path="res://pursuit scene/céu.png" type="Texture" id=5]
[ext_resource path="res://pursuit scene/arranha céu 1.png" type="Texture" id=6]
[ext_resource path="res://pursuit scene/limite ponte.png" type="Texture" id=7]
[ext_resource path="res://pursuit scene/pista.png" type="Texture" id=8]
[ext_resource path="res://pursuit scene/arranha céu 2.png" type="Texture" id=9]
[ext_resource path="res://scripts/roadManager.gd" type="Script" id=10]
[ext_resource path="res://scripts/CarSpawner.gd" type="Script" id=11]
[ext_resource path="res://scripts/blackScreen.gd" type="Script" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 210, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 100 )

[node name="Node" type="YSort"]

[node name="gameManager" type="Node" parent="."]
script = ExtResource( 11 )

[node name="spawnTimer" type="Timer" parent="gameManager"]
wait_time = 7.0
autostart = true

[node name="Timer" type="Timer" parent="gameManager"]

[node name="CarBody" type="RigidBody2D" parent="." groups=[
"player",
]]
position = Vector2( 100, 300 )
z_index = 2
collision_mask = 2
mode = 2
gravity_scale = 0.0
can_sleep = false
script = ExtResource( 2 )

[node name="SpritePivot" type="YSort" parent="CarBody"]

[node name="Sprite" type="Sprite" parent="CarBody/SpritePivot"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarBody"]
position = Vector2( 0, 10 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="CarBody"]

[node name="PopupMenu" parent="CarBody/CanvasLayer" instance=ExtResource( 4 )]
items = [ "Continue", null, 0, false, false, 0, 0, null, "", false, "Exit To Menu", null, 0, false, false, 1, 0, null, "", false, "Quit Game", null, 0, false, false, 2, 0, null, "", false ]

[node name="scenario" type="Node2D" parent="."]

[node name="bridge" type="Node2D" parent="scenario"]

[node name="skyManager" type="Node" parent="scenario/bridge"]
script = ExtResource( 10 )
moveSpeed = 10
teleportPos = 415

[node name="ceu" type="Sprite" parent="scenario/bridge/skyManager"]
scale = Vector2( 1.02096, 1.05825 )
texture = ExtResource( 5 )
centered = false

[node name="ceu2" type="Sprite" parent="scenario/bridge/skyManager"]
position = Vector2( 415, 0 )
scale = Vector2( 1.02096, 1.05825 )
texture = ExtResource( 5 )
centered = false

[node name="buildingsManager" type="Node" parent="scenario/bridge"]
script = ExtResource( 10 )
moveSpeed = 75
teleportPos = 750

[node name="building1" type="Node2D" parent="scenario/bridge/buildingsManager"]

[node name="Sprite4" type="Sprite" parent="scenario/bridge/buildingsManager/building1"]
position = Vector2( 100, 145 )
texture = ExtResource( 9 )
centered = false

[node name="Sprite5" type="Sprite" parent="scenario/bridge/buildingsManager/building1"]
position = Vector2( 400, 145 )
texture = ExtResource( 9 )
centered = false

[node name="Sprite6" type="Sprite" parent="scenario/bridge/buildingsManager/building1"]
position = Vector2( 550, 145 )
texture = ExtResource( 9 )
centered = false

[node name="building2" type="Node2D" parent="scenario/bridge/buildingsManager"]

[node name="Sprite3" type="Sprite" parent="scenario/bridge/buildingsManager/building2"]
position = Vector2( -69, 65 )
texture = ExtResource( 6 )
centered = false

[node name="Sprite4" type="Sprite" parent="scenario/bridge/buildingsManager/building2"]
position = Vector2( 260, 65 )
texture = ExtResource( 6 )
centered = false

[node name="Sprite5" type="Sprite" parent="scenario/bridge/buildingsManager/building2"]
position = Vector2( 700, 65 )
texture = ExtResource( 6 )
centered = false

[node name="roadManager" type="Node" parent="scenario/bridge"]
script = ExtResource( 10 )
teleportPos = 450

[node name="road" type="Node2D" parent="scenario/bridge/roadManager"]
scale = Vector2( 1, 1.05 )

[node name="Sprite2" type="Sprite" parent="scenario/bridge/roadManager/road"]
position = Vector2( 0, -20 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, 300 )

[node name="Sprite4" type="Sprite" parent="scenario/bridge/roadManager/road"]
position = Vector2( 228, -20 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, 300 )

[node name="road2" type="Node2D" parent="scenario/bridge/roadManager"]
position = Vector2( 453, 0 )
scale = Vector2( 1, 1.05 )

[node name="Sprite2" type="Sprite" parent="scenario/bridge/roadManager/road2"]
position = Vector2( 0, -20 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, 300 )

[node name="Sprite4" type="Sprite" parent="scenario/bridge/roadManager/road2"]
position = Vector2( 228, -20 )
scale = Vector2( 1.1, 1 )
texture = ExtResource( 8 )
centered = false
offset = Vector2( 0, 300 )

[node name="wallManager" type="Node" parent="scenario/bridge"]
script = ExtResource( 10 )
teleportPos = 420

[node name="wall" type="Node2D" parent="scenario/bridge/wallManager"]
position = Vector2( 0, 15 )

[node name="Sprite3" type="Sprite" parent="scenario/bridge/wallManager/wall"]
position = Vector2( 210, 180 )
texture = ExtResource( 7 )
centered = false

[node name="Sprite5" type="Sprite" parent="scenario/bridge/wallManager/wall"]
position = Vector2( 0, 180 )
texture = ExtResource( 7 )
centered = false

[node name="wall2" type="Node2D" parent="scenario/bridge/wallManager"]
position = Vector2( 420, 15 )

[node name="Sprite3" type="Sprite" parent="scenario/bridge/wallManager/wall2"]
position = Vector2( 210, 180 )
texture = ExtResource( 7 )
centered = false

[node name="Sprite5" type="Sprite" parent="scenario/bridge/wallManager/wall2"]
position = Vector2( 0, 180 )
texture = ExtResource( 7 )
centered = false

[node name="Sprite5" type="Sprite" parent="scenario"]

[node name="Position2D" type="Position2D" parent="scenario"]
position = Vector2( 454.432, 280.886 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 3 )
autoplay = true

[node name="borders" type="Node" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="borders"]
visible = false
position = Vector2( 210, 280 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/StaticBody2D"]
shape = SubResource( 2 )

[node name="StaticBody2D2" type="StaticBody2D" parent="borders"]
visible = false
position = Vector2( 210, 410 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/StaticBody2D2"]
position = Vector2( 0, 10 )
shape = SubResource( 2 )

[node name="StaticBody2D3" type="StaticBody2D" parent="borders"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/StaticBody2D3"]
position = Vector2( 0, 300 )
shape = SubResource( 3 )

[node name="StaticBody2D4" type="StaticBody2D" parent="borders"]
visible = false
position = Vector2( 420, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="borders/StaticBody2D4"]
position = Vector2( 0, 300 )
shape = SubResource( 3 )

[node name="blackScreen" type="Sprite" parent="."]
script = ExtResource( 12 )
[connection signal="timeout" from="gameManager/spawnTimer" to="gameManager" method="_on_spawnTimer_timeout"]
